# blood-test-parser

./: .cursorignore  .gitignore  CLAUDE.md  GOOGLE_SHEETS_SETUP.md  README.md  google_sheets_service.py  main.py  models.py  parser.py  pyproject.toml  requirements.txt  sample_expected_result.json  system_instructions.txt  test_multi_sheet.py  validator.py  vercel.json
api/: index.py
web/: app.py
web/static/: app.css  app.js
web/templates/: index.html
web/templates/partials/: form.html  result_row.html
